nodejs-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: nodejs-backend
  template:
    metadata:
      labels:
        app: nodejs-backend
    spec:
      containers:
      - name: nodejs-backend
        image: lordofkangs/nodejs_backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
spec:
  selector:
    app: nodejs-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
