ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: / 
            pathType: Prefix       
            backend:
              service:
                name: react-frontend
                port: 
                  number: 80
          - path: /api
            pathType: Prefix       
            backend:
              service:
                name: nodejs-backend
                port: 
                  number: 8080
